ADD_SUBDIRECTORY(engine ${TRAVERSO_BUILD_DIR})
ADD_SUBDIRECTORY(audiofileio ${TRAVERSO_BUILD_DIR})
ADD_SUBDIRECTORY(commands ${TRAVERSO_BUILD_DIR})
ADD_SUBDIRECTORY(core ${TRAVERSO_BUILD_DIR})
ADD_SUBDIRECTORY(3rdparty ${TRAVERSO_BUILD_DIR})
ADD_SUBDIRECTORY(plugins ${TRAVERSO_BUILD_DIR})
ADD_SUBDIRECTORY(sheetcanvas ${TRAVERSO_BUILD_DIR})
ADD_SUBDIRECTORY(traverso ${TRAVERSO_BUILD_DIR})

IF(USE_PCH)
    ADD_PRECOMPILED_HEADER(precompiled_headers precompile.h)
ENDIF(USE_PCH)

